# luastruct

./: .gitattributes  CMakeLists.txt
lib/lua/: lua.cmake
src/: array.c  debug.c  debug.h  helpers.h  luastruct.c  luastruct.h  main.c  object.c  struct.c
tests/: CMakeLists.txt  test.lua  test_array.h  test_array_index.c  test_array_len.c  test_array_newindex.c  test_array_pairs.c  test_object.h  test_object_eq.c  test_object_index.c  test_object_newindex.c  test_object_pairs.c
